--- a/android/AndroidManifest.xml
+++ b/android/AndroidManifest.xml
@@ -3,12 +3,16 @@
     package="com.mygdx.game">
 
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.INTERNET"/>
+
 
     <application
+        android:name="code.apps.ripple.activityfolder.WallpaperApplication"
         android:allowBackup="true"
         android:appCategory="game"
         android:icon="@drawable/ic_launcher"
         android:isGame="true"
+        android:usesCleartextTraffic="true"
         android:label="@string/app_name"
         android:theme="@style/AppTheme">
         <activity android:name=".ui.home.HomeActivity">
@@ -23,11 +27,6 @@
             android:configChanges="keyboard|keyboardHidden|navigation|orientation|screenSize|screenLayout"
             android:label="@string/app_name"
             android:screenOrientation="landscape" />
-        <activity android:name="code.apps.ripple.activityfolder.choosebg.BackgroundChooseActivity" />
-        <activity android:name="code.apps.ripple.activityfolder.chooseparticle.ParticleChooseActivity" />
-        <activity android:name="code.apps.ripple.activityfolder.Launcher">
-        </activity>
-        <activity android:name="code.apps.ripple.activityfolder.SettingsActivity" />
 
         <service
             android:name="code.apps.ripple.logic.Wallpaper"
@@ -42,6 +41,11 @@
                 <action android:name="android.service.wallpaper.WallpaperService" />
             </intent-filter>
         </service>
+
+        <uses-library
+            android:name="org.apache.http.legacy"
+            android:required="false" />
+
     </application>
 
 </manifest>
